Multiple choice dialog

--- a/PointOfSale/app/src/main/res/values/strings.xml
+++ b/PointOfSale/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="remove">Remove</string>
     <string name="confirmation_dialog_message">Are you sure you want to remove all items?</string>
     <string name="edit">Edit</string>
+    <string name="search">search</string>
+    <string name="Choose_an_item">Choose_an_Item</string>
 </resources>
